[add]Parameter Msg [move]ipynb to notebook

--- a/notebook/simsiam_VICReg.ipynb
+++ b/notebook/simsiam_VICReg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "restricted-insight",
+   "id": "sound-saturn",
    "metadata": {},
    "source": [
     "# simsiam_VICReg"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "analyzed-purchase",
+   "id": "cleared-conference",
    "metadata": {},
    "source": [
     "https://github.com/vturrisi/solo-learn/blob/da26b4dcbd69dab45593ceb031f04568f7659667/solo/losses/vicreg.py#L82"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sticky-analyst",
+   "execution_count": 1,
+   "id": "primary-lightning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "weight_decay = 1e-4\n",
     "WORKERS = 16\n",
     "momentum = 0.9\n",
-    "output_foloder = 'model/model_bird_vic_simsiam_pretrain'\n",
+    "output_foloder = 'model/model_bird_vic_simsiam_pretrain_500'\n",
     "d = 1024\n",
     "sim_weight=1.\n",
     "var_weight=1.\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "alert-grass",
+   "id": "hollow-carbon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +65,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "careful-question",
+   "id": "controversial-associate",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'loss_functions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-1c674ad8d3f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mloss_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvicreg\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msimsiam_vicreg_loss_func\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctional\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'loss_functions'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import math\n",
@@ -101,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "analyzed-paper",
+   "id": "leading-transcript",
    "metadata": {},
    "source": [
     "## GPU Check"
@@ -109,19 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "functional-nickel",
+   "execution_count": null,
+   "id": "enabling-finland",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch version:1.9.0+cu102\n",
-      "Available GPUs: GeForce RTX 2080 Ti GeForce GTX 1080 Ti "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('torch version:' + torch.__version__)\n",
     "\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-riverside",
+   "id": "ambient-outdoors",
    "metadata": {},
    "source": [
     "## read classes txt"
@@ -146,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "incorrect-garage",
+   "id": "sticky-parent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trying-juvenile",
+   "id": "structured-omega",
    "metadata": {},
    "source": [
     "## read labels txt"
@@ -169,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dutch-allergy",
+   "id": "cordless-prescription",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "humanitarian-artist",
+   "id": "fiscal-expert",
    "metadata": {},
    "source": [
     "## define dataset"
@@ -215,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "african-qatar",
+   "id": "pharmaceutical-unknown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improving-identification",
+   "id": "beneficial-dancing",
    "metadata": {},
    "source": [
     "## define data augmentation"
@@ -269,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "missing-clear",
+   "id": "positive-washington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "correct-suffering",
+   "id": "opposite-arctic",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-calibration",
+   "id": "offshore-millennium",
    "metadata": {},
    "source": [
     "## define model"
@@ -378,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "conservative-boston",
+   "id": "universal-bermuda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "tough-authentication",
+   "id": "protecting-welsh",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "handmade-preserve",
+   "id": "anonymous-glory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "auburn-secretary",
+   "id": "athletic-embassy",
    "metadata": {},
    "source": [
     "### save model"
@@ -469,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "median-return",
+   "id": "tribal-housing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swiss-stage",
+   "id": "guided-mountain",
    "metadata": {},
    "source": [
     "## Train"
@@ -490,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "stretch-thesis",
+   "id": "catholic-frederick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considerable-member",
+   "id": "entitled-milton",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contemporary-portsmouth",
+   "id": "fitting-champagne",
    "metadata": {},
    "outputs": [],
    "source": []
