--- a/notebook/train_ Swin.ipynb
+++ b/notebook/train_ Swin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "configured-rental",
+   "id": "drawn-paragraph",
    "metadata": {},
    "source": [
     "# swin_transformer\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "viral-glossary",
+   "id": "broke-skill",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "phantom-valentine",
+   "id": "electoral-gothic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "later-ministry",
+   "id": "assured-tomorrow",
    "metadata": {},
    "source": [
     "# GPU Check"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "concerned-allocation",
+   "id": "maritime-entry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "strong-argument",
+   "id": "artificial-entrepreneur",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flexible-funeral",
+   "id": "novel-cancer",
    "metadata": {},
    "source": [
     "# Dataset"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automotive-slovenia",
+   "id": "separated-youth",
    "metadata": {},
    "source": [
     "#### Define dataset, and dataloader"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "smaller-train",
+   "id": "seeing-queue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "future-device",
+   "id": "imported-essence",
    "metadata": {},
    "source": [
     "# Data augmentation"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cultural-watson",
+   "id": "extended-estonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-burning",
+   "id": "hazardous-collins",
    "metadata": {},
    "source": [
     "## read classes txt"
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "south-floating",
+   "id": "joined-month",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "million-advice",
+   "id": "muslim-thesaurus",
    "metadata": {},
    "source": [
     "## read labels txt"
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "stopped-carolina",
+   "id": "placed-student",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "protected-enhancement",
+   "id": "recognized-blond",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-certification",
+   "id": "established-weekend",
    "metadata": {},
    "source": [
     "### Test Data loader"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "phantom-directive",
+   "id": "liable-effectiveness",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equal-bailey",
+   "id": "traditional-sociology",
    "metadata": {},
    "source": [
     "# model"
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hourly-hollywood",
+   "id": "annual-boring",
    "metadata": {},
    "source": [
     " ### define optimizer, scheduler"
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sacred-republican",
+   "id": "recognized-virtue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "induced-karaoke",
+   "id": "honey-complex",
    "metadata": {},
    "source": [
     "### fix model"
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heated-partition",
+   "id": "sporting-struggle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "industrial-bidding",
+   "id": "romantic-island",
    "metadata": {},
    "source": [
     "## define model"
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premier-provider",
+   "id": "superior-girlfriend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-procurement",
+   "id": "executive-blair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooperative-archives",
+   "id": "allied-meeting",
    "metadata": {},
    "source": [
     "#### Define loss and evaluation functions"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "robust-pride",
+   "id": "upper-advantage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "structural-reaction",
+   "id": "harmful-opposition",
    "metadata": {},
    "source": [
     "#### Train model"
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parliamentary-sullivan",
+   "id": "organizational-output",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continued-engineer",
+   "id": "intense-physics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cloudy-african",
+   "id": "damaged-hampton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mediterranean-tablet",
+   "id": "residential-pregnancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hired-swift",
+   "id": "minus-lodge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "monthly-recommendation",
+   "id": "photographic-timber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,8 +858,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "willing-promotion",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/workspace/project/Bird_classification',\n",
+       " '/opt/conda/lib/python37.zip',\n",
+       " '/opt/conda/lib/python3.7',\n",
+       " '/opt/conda/lib/python3.7/lib-dynload',\n",
+       " '',\n",
+       " '/home/me/.local/lib/python3.7/site-packages',\n",
+       " '/opt/conda/lib/python3.7/site-packages',\n",
+       " '/opt/conda/lib/python3.7/site-packages/IPython/extensions',\n",
+       " '/home/me/.ipython']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "concrete-scotland",
+   "id": "congressional-minority",
    "metadata": {},
    "outputs": [],
    "source": []
