[modify]report code

--- a/notebook/evaluation.ipynb
+++ b/notebook/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "human-intelligence",
+   "id": "elder-forty",
    "metadata": {},
    "source": [
     "# evaluation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classified-institute",
+   "id": "ordinary-statistics",
    "metadata": {},
    "source": [
     "### import package"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "julian-financing",
+   "id": "handmade-hampshire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emotional-batch",
+   "id": "utility-threat",
    "metadata": {},
    "source": [
     "### check gpu"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "catholic-stations",
+   "id": "naval-warehouse",
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +69,9 @@
     }
    ],
    "source": [
-    "data_path = '../../dataset/bird_datasets/train'\n",
-    "classes_path = '../../dataset/bird_datasets/classes.txt'\n",
-    "training_labels_path = '../../dataset/bird_datasets/training_labels.txt'\n",
+    "data_path = '../../../dataset/bird_datasets/train'\n",
+    "classes_path = '../../../dataset/bird_datasets/classes.txt'\n",
+    "training_labels_path = '../../../dataset/bird_datasets/training_labels.txt'\n",
     "\n",
     "BATCH_SIZE = 32\n",
     "WORKERS = 32\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-convergence",
+   "id": "designing-runner",
    "metadata": {},
    "source": [
     "## read classes, labels txt"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "apart-patio",
+   "id": "bridal-draft",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-concern",
+   "id": "ordinary-anchor",
    "metadata": {},
    "source": [
     "### Data augmentation"
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "convertible-powder",
+   "id": "harmful-disaster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "historical-crest",
+   "id": "flush-greeting",
    "metadata": {},
    "source": [
     "### Dataset\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "skilled-replication",
+   "id": "graduate-ebony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "corrected-beauty",
+   "id": "copyrighted-resource",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-enlargement",
+   "id": "anticipated-maximum",
    "metadata": {},
    "source": [
     "### test model"
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interracial-lafayette",
+   "id": "tight-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,17 +315,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "therapeutic-bonus",
+   "execution_count": 17,
+   "id": "nutritional-innocent",
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_model(path, idx = 99):\n",
     "    with torch.no_grad():\n",
-    "        model = torch.load('{}/checkpoint.pth.tar'.format(path))\n",
+    "        model = torch.load('../{}/checkpoint.pth.tar'.format(path))\n",
     "#         model = models.resnet50(pretrained=True).to(device)\n",
-    "        model.load_state_dict(torch.load('{}/checkpoint_{}.pth.tar'.format(path, idx))['state_dict'])\n",
+    "        model.load_state_dict(torch.load('../{}/checkpoint_{}.pth.tar'.format(path, idx))['state_dict'])\n",
     "        val_loss, val_acc_top1, val_acc_top5 = pass_epoch(model,test_loader, 'Eval') \n",
+    "        torch.save(model, 'best_checkpoint.pth')\n",
     "    print(\"val_loss \", val_loss.to('cpu').numpy(), \"val_acc_top1\", val_acc_top1.to('cpu').numpy(), \"val_acc_top5 \", val_acc_top5.to('cpu').numpy())\n",
     "    torch.cuda.empty_cache()"
    ]
@@ -333,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "treated-scout",
+   "id": "federal-citizenship",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "narrative-electric",
+   "id": "gothic-munich",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "blocked-offering",
+   "id": "proved-singing",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "judicial-minutes",
+   "id": "laughing-circumstances",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "split-consortium",
+   "id": "informed-transaction",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "interpreted-military",
+   "id": "dried-gardening",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "beginning-arbor",
+   "id": "choice-fight",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "auburn-directive",
+   "id": "appropriate-cleaners",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "asian-riverside",
+   "id": "completed-honor",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "unable-brighton",
+   "id": "changed-bulletin",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "polished-liberia",
+   "id": "agricultural-airport",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ahead-sweden",
+   "id": "second-master",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "black-audience",
+   "id": "retained-mapping",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "funny-capability",
+   "id": "charitable-costa",
    "metadata": {},
    "outputs": [
     {
@@ -780,29 +781,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "expired-translation",
+   "execution_count": 18,
+   "id": "otherwise-restriction",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10it [00:01,  5.52it/s]"
+      "10it [00:01,  5.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val_loss  0.18112554 val_acc_top1 [98.75] val_acc_top5  [100.]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "val_loss  0.18126538 val_acc_top1 [98.75] val_acc_top5  [100.]\n"
      ]
     }
    ],
@@ -813,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "welcome-million",
+   "id": "meaningful-check",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "regular-daily",
+   "id": "adaptive-intention",
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "moving-estimate",
+   "id": "handed-championship",
    "metadata": {},
    "outputs": [
     {
